salesforce/force-app/main/default/objects/Opportunity/fields/Anonymous_Gift__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The donor asked on baytides.org not to be publicly recognized for this gift.</description>
    <label>Anonymous Gift</label>
    <type>Checkbox</type>
</CustomField>