salesforce/force-app/main/default/objects/Opportunity/fields/Stripe_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stripe PaymentIntent ID (pi_) for a one-time gift or Invoice ID (in_) for a monthly installment. Set by the baytides.org donation webhook, which uses it to record each payment once.</description>
    <externalId>true</externalId>
    <label>Stripe Payment ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>