salesforce/force-app/main/default/objects/Opportunity/recordTypes/Donation.recordType-meta.xml
<RecordType>
    <fullName>Donation</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Individual and household gifts, including gifts synced from Stripe.</description>
    <label>Donation</label>
</RecordType>