salesforce/force-app/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <businessProcess>Grant_Process</businessProcess>
    <description>Foundation, corporate, and government grants.</description>
    <label>Grant</label>
</RecordType>