salesforce/force-app/main/default/objects/Opportunity/recordTypes/In_Kind_Gift.recordType-meta.xml
<RecordType>
    <fullName>In_Kind_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Donated goods or services.</description>
    <label>In-Kind Gift</label>
</RecordType>