salesforce/force-app/main/default/objects/Opportunity/recordTypes/Major_Gift.recordType-meta.xml
<RecordType>
    <fullName>Major_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Large gifts cultivated over time.</description>
    <label>Major Gift</label>
</RecordType>