salesforce/force-app/main/default/objects/Opportunity/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Membership dues.</description>
    <label>Membership</label>
</RecordType>